--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -43,7 +43,8 @@ jwt:
 
 storage:
   local:
-    base-path: ${STORAGE_PATH:/tmp/school-saas-storage}
+    base-path: ${STORAGE_PATH:C:/saas-school}
+  max-file-size: 10485760
 
 server:
   port: 8080
